Finished the first version of header.

--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -1,3 +1,8 @@
+/*
+    Project's orange color: #e67e22;
+*/
+
+/* Basic Setup - Elements */
 * {
     margin: 0;
     padding: 0;
@@ -31,6 +36,7 @@ h1 {
     word-spacing: 4px;
 }
 
+/* Classes */
 .hero-text-box {
     position: absolute;
     width: 1140px;
@@ -81,4 +87,38 @@ h1 {
 .btn-ghost:active {
     border-color: #cf6d17;
     color: #fff;
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 15px;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 8px 0px;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #e67e22;
 }
