--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -192,9 +192,31 @@ section {
 .meal-photo {
     width: 100%;
     margin: 0;
+    overflow: hidden;
+    background-color: #000;
 }
 
 .meal-photo img {
+    opacity: 0.7;
     width: 100%;
     height: auto;
+    transform: scale(1.15);
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.meal-photo img:hover {
+    opacity: 1;
+    transform: scale(1.03);
+}
+
+.features-row {
+    margin-top: 20px;
+}
+
+.section-meals {
+    padding: 0;
+}
+
+.section-features long-copy {
+    margin-bottom: 30px;
 }
