Cities section adjusted

--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -68,6 +68,21 @@ section {
     padding: 80px 0;
 }
 
+a:link,
+a:visited {
+    color: #e67e22;
+    text-decoration: none;
+    padding-bottom: 1px;
+    border-bottom: 1px solid #e67e22;
+    transition: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active {
+    color: #555;
+    border-bottom: 1px solid transparent;
+}
+
 /* Classes */
 .clearfix {zoom: 1}
 .clearfix:after {
@@ -267,6 +282,11 @@ section {
     margin-right: 25px;
 }
 
+.btn-app:link,
+.btn-app:visited {
+    border: 0;
+}
+
 .btn-app img {
     height: 50px;
     width: auto;
@@ -275,4 +295,22 @@ section {
 
 .section-steps {
     background-color: #f4f4f4;
+}
+
+.box img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.city-feature {
+    margin-bottom: 5px;
+}
+
+.icon-small {
+    display: inline;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 120%;
 }
