--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -105,6 +105,18 @@ a:active {
     border-bottom: 1px solid transparent;
 }
 
+footer {
+    background-color: #333;
+    padding: 50px;
+    font-size: 80%;
+}
+
+footer p {
+    color: #888;
+    text-align: center;
+    margin-top: 20px;
+}
+
 /* Classes */
 .clearfix {zoom: 1}
 .clearfix:after {
@@ -438,4 +450,70 @@ cite img {
 .contact-form {
     width: 60%;
     margin: 0 auto;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.footer-nav li,
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+    margin: 0;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    transition: color 0.2s;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 160%;
+}
+
+.fa-facebook-f:hover,
+.fa-twitter:hover,
+.fa-instagram:hover {
+    transform: scale(1.2);
+    transition: transform 0.5s;
+}
+
+.fa-facebook-f:hover {
+    color: #3b5998;
+}
+
+.fa-twitter:hover {
+    color: #00aced;
+}
+
+.fa-instagram:hover {
+    color: #517fa4;
+}
+
+.fa-facebook-f,
+.fa-twitter,
+.fa-instagram {
+    transition: transform 1.5s, color 1.5s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #ddd;
 }
