--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -13,13 +13,15 @@
     outline: none;
 }
 
-html {
+html,
+body {
     background-color: #fff;
     color: #555;
     font-family: 'Lato', 'Arial', 'sans-serif';
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden;
 }
 
 header {
