--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -6,7 +6,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 *:focus {
@@ -25,6 +26,7 @@ body {
 }
 
 header {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url(img/hero.jpg);
     background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
     background-size: cover;
     background-position: center;
@@ -98,6 +100,7 @@ a:visited {
     text-decoration: none;
     padding-bottom: 1px;
     border-bottom: 1px solid #e67e22;
+    -webkit-transition: border-bottom 0.2s, color 0.2s;
     transition: border-bottom 0.2s, color 0.2s;
 }
 
@@ -134,7 +137,8 @@ footer p {
     width: 1140px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 
 .row {
@@ -151,6 +155,7 @@ input[type=submit] {
     text-decoration: none;
     border-radius: 200px;
     border: 1px solid #e67e22;
+    -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
     transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -210,6 +215,7 @@ input[type=submit]:hover {
     text-transform: uppercase;
     font-size: 90%;
     border-bottom: 2px solid transparent;
+    -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
 }
 
@@ -263,13 +269,18 @@ input[type=submit]:hover {
     opacity: 0.7;
     width: 100%;
     height: auto;
-    transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+            transform: scale(1.15);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 .meal-photo img:hover {
     opacity: 1;
-    transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+            transform: scale(1.03);
 }
 
 .features-row {
@@ -355,6 +366,7 @@ input[type=submit]:hover {
 }
 
 .section-testimonials {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url('../img/back-customers.jpg');
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../img/back-customers.jpg');
     background-size: cover;
     color: #fff;
@@ -400,7 +412,8 @@ cite img {
     border-radius: 5px;
     width: 90%;
     margin-left: 5%;
-    box-shadow: 0 2px 2px #e3e3e3;
+    -webkit-box-shadow: 0 2px 2px #e3e3e3;
+            box-shadow: 0 2px 2px #e3e3e3;
 }
 
 .plan-box div {
@@ -482,6 +495,7 @@ cite img {
     text-decoration: none;
     border: 0;
     color: #888;
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
@@ -493,8 +507,12 @@ cite img {
 .fa-facebook-f:hover,
 .fa-twitter:hover,
 .fa-instagram:hover {
-    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
     transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
 .fa-facebook-f:hover {
@@ -512,7 +530,10 @@ cite img {
 .fa-facebook-f,
 .fa-twitter,
 .fa-instagram {
+    -webkit-transition: color 1.5s, -webkit-transform 1.5s;
+    transition: color 1.5s, -webkit-transform 1.5s;
     transition: transform 1.5s, color 1.5s;
+    transition: transform 1.5s, color 1.5s, -webkit-transform 1.5s;
 }
 
 .footer-nav li a:hover,
