--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -196,6 +196,14 @@ input[type=submit]:hover {
     margin-top: 20px;
 }
 
+.logo-black {
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 6px 0;
+}
+
 .main-nav {
     float: right;
     list-style: none;
@@ -222,6 +230,34 @@ input[type=submit]:hover {
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 2px solid #e67e22;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.98);
+    height: 60px;
+    box-shadow: 0 2px 2px #efefef;
+}
+
+.main-nav {
+    margin-top: -20px;
+}
+
+.sticky li a:link,
+.sticky li a:visited {
+    padding: 15px 0;
+    color: #555;
+}
+
+.sticky .logo {
+    display: none;
+}
+
+.sticky .logo-black {
+    display: block;
 }
 
 .long-copy {
