--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -240,14 +240,15 @@ input[type=submit]:hover {
     background: rgba(255, 255, 255, 0.98);
     height: 60px;
     box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
 }
 
-.main-nav {
+.sticky .main-nav {
     margin-top: -20px;
 }
 
-.sticky li a:link,
-.sticky li a:visited {
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
     padding: 15px 0;
     color: #555;
 }
