--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -239,7 +239,8 @@ input[type=submit]:hover {
     width: 100%;
     background: rgba(255, 255, 255, 0.98);
     height: 60px;
-    box-shadow: 0 2px 2px #efefef;
+    -webkit-box-shadow: 0 2px 2px #efefef;
+            box-shadow: 0 2px 2px #efefef;
     z-index: 9999;
 }
 
@@ -576,4 +577,24 @@ cite img {
 .footer-nav li a:hover,
 .footer-nav li a:active {
     color: #ddd;
+}
+
+/* Animations */
+.js--wp-1,
+.js--wp-2,
+.js--wp-3 {
+    opacity: 0;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+}
+
+.js--wp-4 {
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+}
+
+.js--wp-1 .animate,
+.js--wp-2 .animate,
+.js--wp-3 .animate {
+    opacity: 1;
 }
