Nav menu when uses small size screen

--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -232,6 +232,19 @@ input[type=submit]:hover {
     border-bottom: 2px solid #e67e22;
 }
 
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon i {
+    padding-top: 5px;
+    font-size: 200%;
+    color: #fff;
+}
+
 .sticky {
     position: fixed;
     top: 0;
