--- a/ominifood/src/css/queries.css
+++ b/ominifood/src/css/queries.css
@@ -98,6 +98,50 @@
         display: none;
     }
 
+    .mobile-nav-icon {
+        display: inline-block;
+    }
+
+    .main-nav {
+        float: left;
+        margin-top: 25px;
+        margin-left: 25px;
+    }
+
+    .main-nav li {
+        display: block;
+        margin: 10px;
+    }
+
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 5px 0;
+        font-size: 100%;
+    }
+
+    .sticky {
+        height: auto;
+    }
+
+    .sticky .main-nav {
+        margin-top: 10px;
+    }
+
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited {
+        padding: 10px 0;
+    }
+
+    .sticky .mobile-nav-icon {
+        margin-top: 10px;
+    }
+
+    .sticky .mobile-nav-icon i { 
+        color: #555;
+    }
+
     .long-copy {
         width: 100%;
         margin-left: 0%;
