Image compressor and reduced size

--- a/ominifood/src/css/style.css
+++ b/ominifood/src/css/style.css
@@ -417,8 +417,8 @@ input[type=submit]:hover {
 }
 
 .section-testimonials {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url('../img/back-customers.jpg');
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../img/back-customers.jpg');
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url('../css/img/back-customers.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../css/img/back-customers.jpg');
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
