Features section created

--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/composition";
 @import "components/button";
+@import "components/_feature-box.scss";
 
 @import "layout/grid";
 @import "layout/header";
