--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -7,6 +7,7 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/card";
 @import "components/composition";
 @import "components/button";
 @import "components/_feature-box.scss";
