--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -24,6 +24,19 @@
     &--white {
         background-color: $color-white;
         color: $color-grey-dark;
+
+        &::after {
+            background-color: $color-white;
+        }
+    }
+
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+
+        &::after {
+            background-color: $color-primary;
+        }
     }
 
     &::after {
@@ -37,10 +50,6 @@
         left: 0;
         z-index: -1;
         transition: all 0.4s;
-    }
-
-    &--white::after {
-        background-color: $color-white;
     }
 
     &:hover::after {
