Initial story section

--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/card";
 @import "components/composition";
 @import "components/button";
+@import "components/story";
 @import "components/_feature-box.scss";
 
 @import "layout/grid";
