--- a/natours/sass/components/_story.scss
+++ b/natours/sass/components/_story.scss
@@ -25,14 +25,40 @@
         clip-path: circle(50% at 50% 50%);
 
         transform: translateX(-3rem) skew(12deg);
+        position: relative;
     }
 
     &__img {
-        width: 100%;
         height: 100%;
+        transform: translateX(-4rem) scale(1.4);
+        transition: all 0.5s;
     }
 
     &__text {
         transform: skew(12deg);
+    }
+
+    &__caption {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, 20%);
+        color: $color-white;
+        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-align: center;
+        opacity: 0;
+        transition: all 0.5s;
+        backface-visibility: hidden;
+    }
+
+    &:hover &__caption {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+
+    &:hover &__img {
+        transform: translateX(-4rem) scale(1);
+        filter: blur(3px) brightness(80%);
     }
 }
