--- a/natours/sass/abstracts/_variables.scss
+++ b/natours/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
+$color-grey-dark2: #999;
 $color-white: #fff;
 $color-black: #000;
 
