--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/card";
 @import "components/composition";
 @import "components/button";
+@import "components/form";
 @import "components/story";
 @import "components/_feature-box.scss";
 
