--- a/natours/sass/abstracts/_variables.scss
+++ b/natours/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
 $color-grey-dark2: #999;
+$color-grey-dark3: #333;
 $color-white: #fff;
 $color-black: #000;
 
