--- a/natours/sass/layout/_navigation.scss
+++ b/natours/sass/layout/_navigation.scss
@@ -12,6 +12,7 @@
         right: 6rem;
         border-radius: 50%;
         z-index: 2000;
+        box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
     }
 
     &__background {
@@ -26,8 +27,7 @@
             $color-primary-dark
         );
         z-index: 1000;
-
-        transform: scale(80);
+        transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
     }
 
     &__nav {
@@ -35,8 +35,12 @@
         width: 100%;
         position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
         z-index: 1500;
+
+        opacity: 0;
+        width: 0;
+        transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 
     &__list {
@@ -46,6 +50,7 @@
         transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
+        width: 100%;
     }
 
     &__item {
@@ -84,5 +89,14 @@
             color: $color-primary;
             transform: translateX(1rem);
         }
+    }
+
+    &__checkbox:checked ~ &__background {
+        transform: scale(80);
+    }
+
+    &__checkbox:checked ~ &__nav {
+        opacity: 1;
+        width: 100%;
     }
 }
