--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/button";
 @import "components/form";
 @import "components/story";
+@import "components/popup";
 @import "components/_feature-box.scss";
 
 @import "layout/grid";
