--- a/natours/sass/components/_popup.scss
+++ b/natours/sass/components/_popup.scss
@@ -6,6 +6,9 @@
     left: 0;
     background-color: rgba($color-black, 0.8);
     z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
 
     &__content {
         @include absCenter;
@@ -16,6 +19,9 @@
         border-radius: 3px;
         display: table;
         overflow: hidden;
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.25);
+        transition: all 0.4s 0.2s;
     }
 
     &__left {
@@ -51,5 +57,35 @@
         -ms-hyphens: auto;
         -webkit-hyphens: auto;
         hyphens: auto;
+    }
+
+    // Open states
+    &:target {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &:target &__content {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    &__close {
+        &:link,
+        &:visited {
+            color: $color-grey-dark;
+            position: absolute;
+            top: 2.5rem;
+            right: 2.5rem;
+            font-size: 3rem;
+            text-decoration: none;
+            display: inline-block;
+            transition: all 0.2s;
+            line-height: 1;
+        }
+
+        &:hover {
+            color: $color-primary;
+        }
     }
 }
