Initial media queries

--- a/natours/sass/base/_base.scss
+++ b/natours/sass/base/_base.scss
@@ -7,8 +7,20 @@
 }
 
 html {
-    // This defines what 1rem is.
-    font-size: 62.5%;
+    // This defines what 1 rem is.
+    font-size: 62.5%; // 1 rem = 10px; 10px/16px = 62.5%;
+
+    @include respond(tab-land) {
+        font-size: 56.25%; //1 rem = 9px, 9/16 = 56.26%;
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%; //1 rem = 8px, 8/16 = 50%;
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%; //1 rem = 12, 12/16 = 75%;
+    }
 }
 
 body {
