--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -1,3 +1,10 @@
+/*
+$breakpoint argument choices
+- phone - 600px
+- tab-port - 900px
+- tab-land - 1200px
+- big-dektop - 1800px
+*/
 *,
 *::after,
 *::before {
@@ -7,6 +14,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
