--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -3,7 +3,6 @@ body {
     font-weight: 400;
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -20,6 +19,11 @@ body {
         letter-spacing: 3.5rem;
 
         animation: moveInLeft 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
 
     &--sub {
@@ -29,6 +33,10 @@ body {
         letter-spacing: 1.75rem;
 
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 0.5rem;
+        }
     }
 }
 
@@ -46,6 +54,14 @@ body {
     color: transparent;
     letter-spacing: 2px;
     transition: all 0.2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5em;
+    }
 
     &:hover {
         transform: skewY(0.5deg) skewX(0.5deg) scale(1.01);
