Layout and components mixins

--- a/natours/sass/layout/_footer.scss
+++ b/natours/sass/layout/_footer.scss
@@ -10,7 +10,11 @@
 
     &__logo-box {
         text-align: center;
-        margin: 8rem;
+        margin-bottom: 8rem;
+
+        @include respond(tab-port) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
