--- a/natours/sass/abstracts/_mixins.scss
+++ b/natours/sass/abstracts/_mixins.scss
@@ -25,22 +25,22 @@
 */
 @mixin respond($breakpoint) {
     @if $breakpoint == phone {
-        @media (max-width: 37.5em) {
+        @media only screen and (max-width: 37.5em) {
             @content;
         }
     }
     @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) {
+        @media only screen and (max-width: 56.25em) {
             @content;
         }
     }
     @if $breakpoint == tab-land {
-        @media (max-width: 75em) {
+        @media only screen and (max-width: 75em) {
             @content;
         }
     }
     @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em) {
+        @media only screen and (min-width: 112.5em) {
             @content;
         }
     }
