--- a/natours/sass/components/_card.scss
+++ b/natours/sass/components/_card.scss
@@ -185,7 +185,7 @@
         font-weight: 100;
     }
 
-    @include respond(tab-port) {
+    @media only screen and (max-width: 56.25em), only screen and (hover: none) {
         height: auto;
         border-radius: 3px;
         background-color: $color-white;
