--- a/trillo/css/style.css
+++ b/trillo/css/style.css
@@ -55,11 +55,15 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #fff;
   background-color: orangered;
+  height: 80rem;
   flex: 1; }
 
 /* Logo */
@@ -141,3 +145,15 @@ body {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+
+/* Side navigation */
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+/* Legal text */
+.legal {
+  color: var(--color-grey-light-4);
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem; }
