Media queries added

--- a/nexter/sass/_realtors.scss
+++ b/nexter/sass/_realtors.scss
@@ -7,7 +7,11 @@
     align-content: center;
     justify-content: center;
     justify-items: center;
-    grid-row-gap: 3rem;
+    grid-row-gap: 2rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        grid-column: 1 / -1;
+    }
 
     h3 {
         font-size: 1.6rem;
@@ -19,6 +23,14 @@
         grid-column-gap: 2rem;
         grid-row-gap: 5vh;
         align-items: center;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-template-columns: repeat(3, min-content max-content);
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            grid-template-columns: min-content max-content;
+        }
     }
 
     &__img {
